<resources>
    <string name="app_name">Edraak</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="edraak">Edraak</string>


    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_as_an_Instructor">Sign up As an Instructor</string>
    <string name="sign_up_as_a_student">Sign up As a Student</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="native_language">Native Language</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign up</string>
    <string name="course_name">Course Name</string>
    <string name="quiz_grade">Quiz Grade</string>
    <string name="project_grade">Project Grade</string>
    <string name="attendance_grade">Attendance Grade</string>
    <string name="create_a_new_course">Create A New Course</string>
    <string name="instructor_control_panel">Instructor Control Panel</string>
    <string name="generate_attendance_code">Generate Attendance Code</string>
    <string name="create_new_quiz">Create New Quiz</string>
    <string name="upload_material">Upload Material</string>
    <string name="show_grades">Show Grades</string>
    <string name="confirm">Confirm</string>


</resources>