<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Authentication.Login.LoginFragment">

    <EditText
        android:id="@+id/uiEmailET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="32dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/uiPasswordET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/_5sdp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiEmailET" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uiLoginBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_charcoal"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/login"
        android:textSize="@dimen/_14sdp"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="@+id/uiPasswordET"
        app:layout_constraintStart_toStartOf="@+id/uiPasswordET"
        app:layout_constraintTop_toBottomOf="@+id/uiPasswordET" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:background="@color/dark_charcoal"
        app:layout_constraintBottom_toBottomOf="@+id/uoOrLineTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uoOrLineTV"
        app:layout_constraintTop_toTopOf="@+id/uoOrLineTV" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:background="@color/dark_charcoal"
        app:layout_constraintBottom_toBottomOf="@+id/uoOrLineTV"
        app:layout_constraintEnd_toStartOf="@+id/uoOrLineTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uoOrLineTV" />

    <TextView
        android:id="@+id/uoOrLineTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="or"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiLoginBTN" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ui_RegInstructor_BTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#CC1A57"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/sign_up_as_an_Instructor"
        android:textSize="@dimen/_12sdp"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="@+id/uiLoginBTN"
        app:layout_constraintStart_toStartOf="@+id/uiLoginBTN"
        app:layout_constraintTop_toBottomOf="@+id/uoOrLineTV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ui_RegStudent_BTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#3C4CAA"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/sign_up_as_a_student"
        android:textSize="@dimen/_12sdp"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="@+id/uiLoginBTN"
        app:layout_constraintStart_toStartOf="@+id/uiLoginBTN"
        app:layout_constraintTop_toBottomOf="@+id/ui_RegInstructor_BTN" />

</androidx.constraintlayout.widget.ConstraintLayout>