<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.UserActivities.InstructorActivities.InstructorCourseControl.InstCourseControlFragment"
    android:background="@color/dark_charcoal">

    <ImageView
        android:id="@+id/ui_Course_Control_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_course_control"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/instructor_control_panel"
        android:textColor="@color/gentle_gray"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ui_Course_Control_IV"
        app:layout_constraintEnd_toStartOf="@+id/ui_Course_Control_IV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.cardview.widget.CardView
        android:id="@+id/first_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/ic_pin_pad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/generate_attendance_code"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/seconde_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/first_CardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_CardView"
        app:layout_constraintTop_toTopOf="@+id/first_CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_130sdp"
                android:src="@drawable/ic_quiz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/create_new_quiz"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/third_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_130sdp"
                android:src="@drawable/ic_material"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/upload_material"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fourth_CardView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_margin="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/third_CardView"
        app:layout_constraintTop_toBottomOf="@id/seconde_CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_130sdp"
                android:src="@drawable/ic_grade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/show_grades"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/Current_courseId_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        tools:text="OEShP7uXOOTEpSraw7QVEECsUNk2"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>